--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ coverage.xml
 local_settings.py
 db.sqlite3
 
+#no secrets.json files
+*secrets.json
+
 # Flask stuff:
 instance/
 .webassets-cache
