--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-Django >=2.2.19,< 2.3.0
-djangorestframework>=3.12.0,<3.13.0
+Django >=3.2.0, <3.3.0
+djangorestframework>=3.12.4,<3.13.0
+psycopg2>=2.8.6,<2.9.0
 flake8>=3.9.0, <3.10.0
